# humanoid_vision

./: .gitignore  README.md  docs.txt  flake.nix  pyproject.toml
humanoid_vision/: __init__.py
humanoid_vision/common/: detection.py  hmar_output.py  hmr_output.py  smpl_output.py  track.py  types.py
humanoid_vision/configs/: __init__.py  base.py  cascade_mask_rcnn_vitdet_h_75ep_hmr.py
humanoid_vision/datasets/: __init__.py  image_dataset.py  mocap_dataset.py  smplh_prob_filter.py  utils.py  vitdet_dataset.py
humanoid_vision/deep_sort/: feature_distances.py  forward_prediction.py  linear_assignment.py  nn_matching.py  tracker.py
humanoid_vision/models/: __init__.py  discriminator.py  hmr2.py  losses.py  smpl_wrapper.py
humanoid_vision/pipeline/: __init__.py  association.py  detection.py  feature_extraction.py
humanoid_vision/trackers/: __init__.py  phalp.py  phalp_gt.py
humanoid_vision/utils/: TextClip.py  bbox.py  colors.py  download.py  geometry.py  lart_utils.py  mesh_renderer.py  misc.py  pck_accuracy.py  pose_utils.py  pylogger_phalp.py  render_openpose.py  renderer.py  skeleton_renderer.py  smpl_utils.py  texture_utils.py  utils.py  utils_dataset.py  utils_detectron2.py  utils_detectron2_phalp.py  utils_download.py  utils_tracks.py  video.py  video_io_manager.py  video_writer.py
humanoid_vision/vis/: README.md  pitch.py  utils.py
scripts/: README.md  demo.py  download_weights.py  eval.py  gradio_app.py  hmr_demo.py  hmr_eval.py  hmr_gradio_app.py  hmr_track.py  hmr_track_dataset.sh  hmr_train.py  track.py  track2.py  train.py  world_pose_viewer.py
(+17 files in other folders)
